Move Google Font Permanent Market import to index.html
Resolves a Firefox issue where @font-face cannot be
used in a scoped style.
See: https://bugzilla.mozilla.org/show_bug.cgi?id=830056

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
 
         <link type="image/png" rel="icon" href="/images/icons/favicon-64x64.png" sizes="64x64">
 
+        <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
+
         <link rel="stylesheet" href="/styles/main.css">
 
         <script src="/system.js"></script>
