--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <link type="image/png" rel="icon" href="/images/icons/favicon-64x64.png" sizes="64x64">
 
         <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
-
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/styles/main.css">
 
         <script src="/system.js"></script>
