Fix IE styling for quotes, buckets, banner overlays
Added shim for classList (using rawgit CDN)
Added margin for banner overlays
Set z-index of #main to keep elements from passing in front of menu

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/styles/main.css">
 
+        <script src="//cdn.rawgit.com/eligrey/classList.js/master/classList.min.js"></script>
+
         <script src="/system.js"></script>
         <script src="/app/config.js"></script>
         <script src="/dependencies.js"></script>
