Fix IE problems created by classList shim
They updated the shim. Now using older version, rather than latest.
Fixed Higher Ed banner issues

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/styles/main.css">
 
-        <script src="//cdn.rawgit.com/eligrey/classList.js/master/classList.min.js"></script>
+        <script src="https://cdn.rawgit.com/eligrey/classList.js/e87db36a95b2381a8c3ed44582a3926185cede70/classList.min.js"></script>
 
         <script src="/system.js"></script>
         <script src="/app/config.js"></script>
