add css for no javascript alert

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     </head>
     <body>
         <noscript>
-            You must enable JavaScript in order to use this site.
+            <div class="nojs"><p>You must enable JavaScript in order to use this site.</p></div>
         </noscript>
     </body>
 </html>
