--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <link type="image/png" rel="apple-touch-icon" href="/images/icons/apple-touch-icon-167x167.png" sizes="167x167">
         <link type="image/png" rel="apple-touch-icon" href="/images/icons/apple-touch-icon-180x180.png" sizes="180x180">
 
-        <link type="image/png" rel="icon" href="/images/icons/favicon-64x64.png" sizes="64x64">
+        <link type="image/x-icon" rel="icon" href="/images/icons/favicon.ico" sizes="16x16">
 
         <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
