Add meta tags for opengraph and twitter cards

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,21 @@
 
         <meta name="description" content="Free educational materials for K-12 and College.">
 
+        <meta property="og:locale" content="en_US">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="OpenStax">
+        <meta property="og:description" content="Free educational materials for K-12 and College.">
+        <meta property="og:url" content="https://openstax.org">
+        <meta property="og:site_name" content="OpenStax">
+        <meta property="og:image" content="https://openstax.org/images/social/os-opengraph-1200x630.png">
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@OpenStax">
+        <meta name="twitter:title" content="OpenStax">
+        <meta name="twitter:description" content="Free educational materials for K-12 and College.">
+        <meta name="twitter:image" content="https://openstax.org/images/social/os-opengraph-1024x530.png">
+        <meta name="twitter:image:alt" content="OpenStax">
+
         <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
         <link rel="stylesheet" href="/styles/main.css">
