--- a/src/index.html
+++ b/src/index.html
@@ -48,5 +48,15 @@
         <noscript>
             <div class="nojs"><p>You must enable JavaScript in order to use this site.</p></div>
         </noscript>
+        <script src="https://cdn.optimizely.com/js/7012081263.js"></script>
+        <script type='text/javascript'>
+            window.__lo_site_id = 63251;
+
+            (function() {
+            var wa = document.createElement('script'); wa.type = 'text/javascript'; wa.async = true;
+            wa.src = 'https://d10lpsik1i8c69.cloudfront.net/w.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wa, s);
+            })();
+        </script>
     </body>
 </html>
