Fix IE11 loading

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
             }());
         </script>
 
+        <script src="https://cdn.rawgit.com/eligrey/classList.js/e87db36a95b2381a8c3ed44582a3926185cede70/classList.min.js"></script>
         <script src="/jspm_packages/system.js"></script>
         <script src="/jspm.browser.js"></script>
         <script src="/jspm.config.js"></script>
