--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-        <meta name="description" content="Free educational materials for K-12 and College.">
+        <meta name="description"
+         content="Access our free college textbooks and low-cost learning materials.">
 
         <meta property="og:locale" content="en_US">
         <meta property="og:type" content="website">
         <meta property="og:title" content="OpenStax">
-        <meta property="og:description" content="Free educational materials for K-12 and College.">
+        <meta property="og:description"
+         content="Access our free college textbooks and low-cost learning materials.">
         <meta property="og:url" content="https://openstax.org">
         <meta property="og:site_name" content="OpenStax">
         <meta property="og:image" content="https://openstax.org/images/social/os-opengraph-1200x630.png">
@@ -18,7 +20,8 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@OpenStax">
         <meta name="twitter:title" content="OpenStax">
-        <meta name="twitter:description" content="Free educational materials for K-12 and College.">
+        <meta name="twitter:description"
+         content="Access our free college textbooks and low-cost learning materials.">
         <meta name="twitter:image" content="https://openstax.org/images/social/os-opengraph-1024x530.png">
         <meta name="twitter:image:alt" content="OpenStax">
 
