Add Pardot tracking for Adoption, Interest, and Login

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,20 @@
                 }
             }());
         </script>
+        <script>
+            piAId = '219812';
+            piCId = '1120';
+
+            (function() {
+                function async_load(){
+                    var s = document.createElement('script'); s.type = 'text/javascript';
+                    s.src = ('https:' == document.location.protocol ? 'https://pi' : 'http://cdn') + '.pardot.com/pd.js';
+                    var c = document.getElementsByTagName('script')[0]; c.parentNode.insertBefore(s, c);
+                }
+                if(window.attachEvent) { window.attachEvent('onload', async_load); }
+                else { window.addEventListener('load', async_load, false); }
+            })();
+        </script>
 
         <script async src="https://cdn.rawgit.com/eligrey/classList.js/e87db36a95b2381a8c3ed44582a3926185cede70/classList.min.js"></script>
         <script src="/jspm_packages/system.js"></script>
