Populate technology page from CMS

--- a/src/index.html
+++ b/src/index.html
@@ -83,12 +83,17 @@
                 '/impact': 'Since 2012, OpenStax has saved students millions ' +
                     'through free, peer-reviewed college textbooks. Learn more about our ' +
                     'impact on the 3,000+ schools who use our books.',
+                '/openstax-tutor': 'OpenStax Tutor Beta is a personalized learning tool ' +
+                    'that improves how students learn with research-based technology, for only $10.',
                 '/partners': 'OpenStax partners have united with us to increase ' +
                     'access to high-quality learning materials. Their low-cost tools ' +
                     'integrate seamlessly with OpenStax books.',
-                '/subjects': 'Our textbooks are openly licensed, peer-reviewed,' +
-                    'free, and backed by learning resources. Check out our books and' +
+                '/subjects': 'Our textbooks are openly licensed, peer-reviewed, ' +
+                    'free, and backed by learning resources. Check out our books and ' +
                     'decide if they\'re right for your course.',
+                '/technology': 'OpenStax has teamed up with our partners to offer a ' +
+                    'variety of low-cost, innovative learning tools and courseware that ' +
+                    'integrate with OpenStax textbooks.',
                 '/tos': 'Since 2012, OpenStax has saved students millions ' +
                     'through free, peer-reviewed college textbooks. Learn more about our ' +
                     'impact on the 3,000+ schools who use our books.'
