--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
                 document.querySelector('meta[name="description"]').content = description;
             }
         </script>
-        <script async src="https://cdn.optimizely.com/js/7893320024.js"></script>
+        <!--script async src="https://cdn.optimizely.com/js/7893320024.js"></script-->
     </head>
     <body>
         <noscript>
