Remove Concept Coach links and form options

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                 '/blog': 'Stay up to date with OpenStax news and hear community '+
                     'perspectives on issues in education and access on the OpenStax blog.',
                 '/contact': 'If you have a question or feedback about our books, ' +
-                    'OpenStax Tutor, Concept Coach, partnerships, or any other topic, ' +
+                    'OpenStax Tutor, partnerships, or any other topic, ' +
                     'contact us here. We\'d love to hear from you!',
                 '/faq': 'Frequently Asked Questions about OpenStax',
                 '/foundation': 'OpenStax is supported by our philanthropic ' +
