partial rollup support

--- a/src/index.html
+++ b/src/index.html
@@ -53,13 +53,9 @@
         </script>
 
         <script async src="https://cdn.rawgit.com/eligrey/classList.js/e87db36a95b2381a8c3ed44582a3926185cede70/classList.min.js"></script>
-        <script src="/jspm_packages/system.js"></script>
-        <script src="/jspm.browser.js"></script>
-        <script src="/jspm.config.js"></script>
-        <script src="/libs/dependencies.js"></script>
+        <script src="/main.js"></script>
 
         <script>
-            SystemJS.import('app/main');
             /* Set meta description for initial page load */
             const descriptions = {
                 '/about': 'OpenStax is a nonprofit based at Rice University, ' +
