Fix analytics module's reliance on SystemJS

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                 else { window.addEventListener('load', async_load, false); }
             })();
         </script>
-
+        <script async src="https://www.google-analytics.com/analytics.js"></script>
         <script async src="https://cdn.rawgit.com/eligrey/classList.js/e87db36a95b2381a8c3ed44582a3926185cede70/classList.min.js"></script>
         <script>
             // SystemJS.import('app/main');
