--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,11 @@
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/styles/main.css">
-        <script src="settings.js" async=false></script>
+        <script src="/settings.js" async=false></script>
         <script>
-            console.debug("SETTINGS:", window.SETTINGS);
+            setTimeout(() => {
+                console.debug("SETTINGS:", window.SETTINGS);
+            }, 250);
         </script>
         <script>
             (function () {
