Updated page roughed in

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <meta name="twitter:image:alt" content="OpenStax">
 
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
         <link rel="stylesheet" href="/styles/main.css?v2.6.0">
         <script src="/settings.js" async="false"></script>
         <script>
