Add cache-busting parameters to CSS files and bundle.js

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/styles/main.css?v2.6.0">
         <script src="/settings.js" async="false"></script>
         <script>
             (function () {
@@ -103,6 +103,6 @@
         <noscript>
             <div class="nojs"><p>You must enable JavaScript in order to use this site.</p></div>
         </noscript>
-        <script async src="/bundle.js"></script>
+        <script async src="/bundle.js?v2.6.0"></script>
     </body>
 </html>
