Add support for delivering synchronous third-party code asynchronously with PostScribe

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,7 @@
             }
         </script>
         <script async src="https://cdn.optimizely.com/js/7893320024.js"></script>
+        <script async src="https://cdnjs.cloudflare.com/ajax/libs/postscribe/2.0.8/postscribe.min.js"></script>
     </head>
     <body>
         <noscript>
