--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet" type="text/css">
         <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
         <link rel="stylesheet" href="/styles/main.css?v2.21.0">
+        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
         <script src="/settings.js" async="false"></script>
         <script>
             (function () {
