--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,7 @@
         <noscript>
             <div class="nojs"><p>You must enable JavaScript in order to use this site.</p></div>
         </noscript>
+        <script src="/library.dll.js"></script>
         <script async src="/bundle.js?v2.25.0"></script>
     </body>
 </html>
