Split out multiple DLLs

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,9 @@
         <noscript>
             <div class="nojs"><p>You must enable JavaScript in order to use this site.</p></div>
         </noscript>
-        <script src="/library.dll.js"></script>
+        <script async src="/babel.dll.js"></script>
+        <script async src="/library.dll.js"></script>
         <script async src="/bundle.js?v2.25.0"></script>
+        <script async src="/mapbox.dll.js"></script>
     </body>
 </html>
