--- a/src/index.html
+++ b/src/index.html
@@ -4,37 +4,12 @@
         <title>OpenStax</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-        <meta name="description">
+        <meta name="description" content="">
 
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet" type="text/css">
-        <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
         <link rel="stylesheet" href="/styles/main.css?v2.25.0">
-        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
-        <script src="/settings.js" async="false"></script>
-        <script>
-            (function () {
-                var jscriptVersion = new Function("/*@cc_on return @_jscript_version; @*/")();
+        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet'>
 
-                if (jscriptVersion) {
-                    alert('This site will not run on Internet Explorer versions prior to 11.');
-                }
-            }());
-        </script>
-        <script>
-            piAId = '219812';
-            piCId = '1120';
-
-            (function() {
-                function async_load(){
-                    var s = document.createElement('script'); s.type = 'text/javascript';
-                    s.src = ('https:' == document.location.protocol ? 'https://pi' : 'http://cdn') + '.pardot.com/pd.js';
-                    var c = document.getElementsByTagName('script')[0]; c.parentNode.insertBefore(s, c);
-                }
-                if(window.attachEvent) { window.attachEvent('onload', async_load); }
-                else { window.addEventListener('load', async_load, false); }
-            })();
-        </script>
-        <script async src="https://www.google-analytics.com/analytics.js"></script>
         <script>
             // SystemJS.import('app/main');
             /* Set meta description for initial page load */
@@ -78,16 +53,33 @@
                 document.querySelector('meta[name="description"]').content = description;
             }
         </script>
-        <script async src="https://cdn.optimizely.com/js/7893320024.js"></script>
-        <script async src="https://cdnjs.cloudflare.com/ajax/libs/postscribe/2.0.8/postscribe.min.js"></script>
+        <script defer src="/settings.js"></script>
+        <script defer src="/babel.dll.js"></script>
+        <script defer src="/library.dll.js"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+        <script defer src="/bundle.js?v2.25.0"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/postscribe/2.0.8/postscribe.min.js"></script>
+        <script defer src="/mapbox.dll.js"></script>
+        <script defer src="https://www.google-analytics.com/analytics.js"></script>
+        <script defer src="https://cdn.optimizely.com/js/7893320024.js"></script>
+        <script>
+            piAId = '219812';
+            piCId = '1120';
+
+            (function() {
+                function async_load(){
+                    var s = document.createElement('script'); s.type = 'text/javascript';
+                    s.src = ('https:' == document.location.protocol ? 'https://pi' : 'http://cdn') + '.pardot.com/pd.js';
+                    var c = document.getElementsByTagName('script')[0]; c.parentNode.insertBefore(s, c);
+                }
+                if(window.attachEvent) { window.attachEvent('onload', async_load); }
+                else { window.addEventListener('load', async_load, false); }
+            })();
+        </script>
     </head>
     <body>
         <noscript>
             <div class="nojs"><p>You must enable JavaScript in order to use this site.</p></div>
         </noscript>
-        <script async src="/babel.dll.js"></script>
-        <script async src="/library.dll.js"></script>
-        <script async src="/bundle.js?v2.25.0"></script>
-        <script async src="/mapbox.dll.js"></script>
     </body>
 </html>
