Remove whatwg-fetch and add cache-busting

--- a/src/index.html
+++ b/src/index.html
@@ -50,13 +50,13 @@
         </script>
         <script src="https://www.google-analytics.com/analytics.js"></script>
         <script src="https://cdn.optimizely.com/js/7893320024.js"></script>
-        <script defer src="/settings.js"></script>
-        <script defer src="/babel.dll.js"></script>
-        <script defer src="/library.dll.js"></script>
+        <script defer src="/settings.js?v2.28.0"></script>
+        <script defer src="/babel.dll.js?v2.28.0"></script>
+        <script defer src="/library.dll.js?v2.28.0"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-        <script defer src="/bundle.js?v2.28.0"></script>
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/postscribe/2.0.8/postscribe.min.js"></script>
-        <script defer src="/mapbox.dll.js"></script>
+        <script defer src="/mapbox.dll.js?v2.28.0"></script>
+        <script defer src="/bundle.js?v2.28.0"></script>
         <script>
             piAId = '219812';
             piCId = '1120';
