--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
         </script>
         <script src="https://www.google-analytics.com/analytics.js"></script>
         <script src="https://cdn.optimizely.com/js/7893320024.js"></script>
+        <script defer src="//script.crazyegg.com/pages/scripts/0013/0704.js"></script>
         <script defer src="/settings.js?v2.29.0"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/postscribe/2.0.8/postscribe.min.js"></script>
