Replace /api with /apps/cms/api

--- a/src/index.html
+++ b/src/index.html
@@ -76,9 +76,9 @@
         <link rel="prefetch" href="/styles/fonts/531c5a28-5575-4f58-96d4-a80f7b702d7b.woff2">
         <link rel="prefetch" href="/styles/fonts/5b1fbd62-45dc-4433-a7df-a2b24a146411.woff2">
         <link rel="prefetch" href="/styles/fonts/21c44514-f4d6-4cff-a5de-e4cac5e61aff.woff2">
-        <link rel="prefetch" href="/api/books?format=json">
-        <link rel="prefetch" href="/api/footer?format=json">
-        <link rel="prefetch" href="/api/pages/openstax-homepage?format=json">
+        <link rel="prefetch" href="/apps/cms/api/books?format=json">
+        <link rel="prefetch" href="/apps/cms/api/footer?format=json">
+        <link rel="prefetch" href="/apps/cms/api/pages/openstax-homepage?format=json">
     </head>
     <body>
         <noscript>
