--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,9 @@
         <script src="https://www.google-analytics.com/analytics.js"></script>
         <script src="https://cdn.optimizely.com/js/7893320024.js"></script>
         <script defer src="//script.crazyegg.com/pages/scripts/0013/0704.js"></script>
-        <script defer src="/settings.js?v2.32.0"></script>
+        <script defer src="@SETTINGS_URL@"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-        <script defer src="/bundle.js?v2.32.0"></script>
+        <script defer src="@BUNDLE_URL@"></script>
         <script>
             piAId = '219812';
             piCId = '1120';
@@ -69,7 +69,7 @@
             })();
         </script>
 
-        <link rel="stylesheet" href="/styles/main.css?v2.32.0">
+        <link rel="stylesheet" href="@STYLES_URL@">
         <link rel="stylesheet" href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css'>
         <link rel="prefetch" href="/styles/fonts/3dac71eb-afa7-4c80-97f0-599202772905.woff2">
         <link rel="prefetch" href="/styles/fonts/531c5a28-5575-4f58-96d4-a80f7b702d7b.woff2">
