--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
 
         <script src="https://www.google-analytics.com/analytics.js"></script>
-        <script src="https://cdn.optimizely.com/js/7893320024.js"></script>
+        <script defer src="https://cdn.optimizely.com/js/7893320024.js"></script>
         <script defer src="//script.crazyegg.com/pages/scripts/0013/0704.js"></script>
         <script defer src="@SETTINGS_URL@"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
@@ -29,10 +29,10 @@
 
         <link rel="stylesheet" href="@STYLES_URL@">
         <link rel="stylesheet" href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css'>
-        <link rel="prefetch" href="@FONTS_URL@/3dac71eb-afa7-4c80-97f0-599202772905.woff2">
-        <link rel="prefetch" href="@FONTS_URL@/531c5a28-5575-4f58-96d4-a80f7b702d7b.woff2">
-        <link rel="prefetch" href="@FONTS_URL@/5b1fbd62-45dc-4433-a7df-a2b24a146411.woff2">
-        <link rel="prefetch" href="@FONTS_URL@/21c44514-f4d6-4cff-a5de-e4cac5e61aff.woff2">
+        <link rel="preload" href="@FONTS_URL@/3dac71eb-afa7-4c80-97f0-599202772905.woff2">
+        <link rel="preload" href="@FONTS_URL@/531c5a28-5575-4f58-96d4-a80f7b702d7b.woff2">
+        <link rel="preload" href="@FONTS_URL@/5b1fbd62-45dc-4433-a7df-a2b24a146411.woff2">
+        <link rel="preload" href="@FONTS_URL@/21c44514-f4d6-4cff-a5de-e4cac5e61aff.woff2">
         <link rel="prefetch" href="/apps/cms/api/books?format=json">
         <link rel="prefetch" href="/apps/cms/api/footer?format=json">
         <link rel="prefetch" href="/apps/cms/api/pages/openstax-homepage?format=json">
