Preconnect to pardot

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                 else { window.addEventListener('load', async_load, false); }
             })();
         </script>
-
+        <link rel="preconnect" href="https://pi.pardot.com">
         <link rel="stylesheet" href="@STYLES_URL@">
         <link rel="preload" as="font" href="@FONTS_URL@/3dac71eb-afa7-4c80-97f0-599202772905.woff2" crossorigin>
         <link rel="preload" as="font" href="@FONTS_URL@/531c5a28-5575-4f58-96d4-a80f7b702d7b.woff2" crossorigin>
