--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta name="description" content="">
+        <link rel="preload" as="font" type="font/woff2" crossorigin
+            href="/cms/assets/fonts/5b1fbd62-45dc-4433-a7df-a2b24a146411.woff2">
+        <link rel="preconnect" href="https://pi.pardot.com" crossorigin>
         <!-- Anti-flicker snippet (recommended)  -->
         <style>.async-hide { opacity: 0 !important} </style>
         <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
