eliminate 30x redirects due to missing trailing slash

--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
             })();
         </script>
         <link rel="stylesheet" href="@STYLES_URL@">
-        <link rel="prefetch" href="/apps/cms/api/books?format=json">
-        <link rel="prefetch" href="/apps/cms/api/footer?format=json">
-        <link rel="prefetch" href="/apps/cms/api/pages/openstax-homepage?format=json">
+        <link rel="prefetch" href="/apps/cms/api/books/?format=json">
+        <link rel="prefetch" href="/apps/cms/api/footer/?format=json">
+        <link rel="prefetch" href="/apps/cms/api/pages/openstax-homepage/?format=json">
         <script>
         (function() {
             var w = window, d = document;
