Handle cookie consent
Issue #1127

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
         (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
         })(window,document.documentElement,'async-hide','dataLayer',4000,
-        {'GTM-XXXXXX':true});</script>
+        {'GTM-KW9STW6':true});</script>
         <script src="https://www.google-analytics.com/analytics.js"></script>
         <script type="text/javascript" src="//script.crazyegg.com/pages/scripts/0084/9271.js" async="async"></script>
         <script defer src="@SETTINGS_URL@"></script>
@@ -65,9 +65,6 @@
           fbq('init', '560465674310764');
           fbq('track', 'PageView');
         </script>
-        <noscript><img height="1" width="1" style="display:none"
-          src="https://www.facebook.com/tr?id=560465674310764&ev=PageView&noscript=1"
-        /></noscript>
     </head>
     <body class="initial-load">
         <noscript>
